k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sirha
  labels:
    name: sirha
    app: sirha-backend
