k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sirha-backend-service
  namespace: sirha
  labels:
    app: sirha-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sirha-backend
